@@ -39,6 +39,7 @@ import org.thymeleaf.context.DialectAwareProcessingContext;
 import org.thymeleaf.context.IContext;
 import org.thymeleaf.context.IProcessingContext;
 import org.thymeleaf.extras.tiles2.naming.ThymeleafTilesNaming;
+import org.thymeleaf.extras.tiles2.renderer.FragmentBehaviour;
 
 
 
@@ -68,19 +69,32 @@ public class ThymeleafTilesRequestContextFactory
     public TilesRequestContext createRequestContext(
             final TilesApplicationContext tilesApplicationContext, final Object... requestItems) {
         
-        // Will require 5 request objects:
+        // Will require 5 (optionally 6) request objects:
         //   1. TemplateEngine
         //   2. IProcessingContext
         //   3. HttpServletRequest
         //   4. HttpServletResponse
         //   5. Writer
+        //   6. (optional) A FragmentBehaviour object indicating whether only the children of
+        //      the selected markup fragment (the attribute to be rendered) should
+        //      be displayed. This is used for differentiating between rendering a
+        //      tiles:include (only the children of the fragment are displayed) and 
+        //      a tiles:substituteby (the selected container itself is displayed).
         
-        if (requestItems.length == 5 &&
+        if ((requestItems.length == 5 &&
                 requestItems[0] instanceof TemplateEngine &&
                 (requestItems[1] instanceof IProcessingContext || requestItems[1] instanceof IContext) &&
                 requestItems[2] instanceof HttpServletRequest &&
                 requestItems[3] instanceof HttpServletResponse &&
-                requestItems[4] instanceof Writer) {
+                requestItems[4] instanceof Writer) 
+            || 
+            (requestItems.length == 6 &&
+                requestItems[0] instanceof TemplateEngine &&
+                (requestItems[1] instanceof IProcessingContext || requestItems[1] instanceof IContext) &&
+                requestItems[2] instanceof HttpServletRequest &&
+                requestItems[3] instanceof HttpServletResponse &&
+                requestItems[4] instanceof Writer &&
+                requestItems[5] instanceof FragmentBehaviour)) {
 
             
             
@@ -89,6 +103,8 @@ public class ThymeleafTilesRequestContextFactory
             final HttpServletRequest request = (HttpServletRequest) requestItems[2];
             final HttpServletResponse response = (HttpServletResponse) requestItems[3];
             final Writer writer = (Writer) requestItems[4];
+            final FragmentBehaviour fragmentBehaviour =
+                    (requestItems.length == 6? (FragmentBehaviour) requestItems[5]  : null);
             
             final IProcessingContext processingContext =
                     (contextObject instanceof IProcessingContext?
@@ -98,13 +114,20 @@ public class ThymeleafTilesRequestContextFactory
                                     templateEngine.getConfiguration().getDialects().values()));
             
             /*
-             * Add TemplateEngine, ProcessingContext and Writer as attributes to the request,
-             * in case we have an scenario where a JSP calls another JSP which then calls a Thymeleaf
-             * template (JSPs use PageContext, which references the original request and response objects).
+             * Add TemplateEngine, ProcessingContext and the "displayOnlyChildren" flag as attributes 
+             * to the request, so that the ThymeleafAttributeRenderer can retrieve them.
+             * 
+             * Note that the "displayOnlyChildren" flag only has validity at the attribute being
+             * immediately rendered and not at any attributes deeper in the Tiles hierarchy. But this
+             * will be OK because every tiles:include/tiles:substituteby processor will specify a
+             * new value for it. In JSPs, this attribute will be of no effect.
              */
             
             request.setAttribute(ThymeleafTilesNaming.TEMPLATE_ENGINE_ATTRIBUTE_NAME, templateEngine);
             request.setAttribute(ThymeleafTilesNaming.PROCESSING_CONTEXT_ATTRIBUTE_NAME, processingContext);
+            if (fragmentBehaviour != null) {
+                request.setAttribute(ThymeleafTilesNaming.FRAGMENT_BEHAVIOUR_ATTRIBUTE_NAME, fragmentBehaviour);
+            }
 
             
             /*
